fixed some spelling, added new meta tags and css for performance on ios devices

--- a/assets/css/layout/mainContent.sass
+++ b/assets/css/layout/mainContent.sass
@@ -8,6 +8,7 @@
   left: 110px
   overflow-y: auto
   overflow-x: hidden
+  -webkit-overflow-scrolling: touch
   background-color: $White
 
 
